[package]
name = "evolutionary_regression"
version = "0.1.0"
authors = ["Bence Meszaros <bence.me@gmail.com>"]
readme = "README.md"
edition = "2018"
default-run = "main"

# disable wasm-opt due to bug: https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
# default = ["wee_alloc"]

[dependencies]
ordered-float = "1.0.2"
rand = { version="0.6.0", features=["wasm-bindgen"] }
statrs = "0.11.0"
approx = "0.3.2"
chrono = "0.4.7"
rayon = "1.4.0"

wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.22", features = ["console"] }
console_error_panic_hook = "0.1.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
